<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_teal"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkest_teal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textFontWeight="700"
        android:paddingTop="30sp"
        android:paddingBottom="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/one_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/two_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/three_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/plus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/four_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_5"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/five_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_6"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/six_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_7"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/minus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_8"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/seven_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_9"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/eight_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_10"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/nine_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_11"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/multiply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_12"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_13"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/zero_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_14"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/equals_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_15"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/divide_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_16"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/advanced_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/advanced_btn"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/advanced_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:gravity="center"
            android:weightSum="4"
            android:orientation="horizontal"
            android:background="@color/light_teal"
            android:outlineAmbientShadowColor="@color/darkest_teal"
            android:visibility="invisible">

            <Button
                android:id="@+id/mod_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/advanced_menu_btn_1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/pow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/advanced_menu_btn_2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/max_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/advanced_menu_btn_3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/min_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/advanced_menu_btn_4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>